feat:update tasks day 1 - lan 2