@@ -1,6 +1,7 @@
 package project_coursemanagement.ptit_cntt1_it211_project_coursemanagement.security.principle;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -10,6 +11,7 @@ import org.springframework.stereotype.Service;
 import project_coursemanagement.ptit_cntt1_it211_project_coursemanagement.model.entity.Users;
 import project_coursemanagement.ptit_cntt1_it211_project_coursemanagement.repository.UsersRepository;
 
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 
@@ -21,16 +23,10 @@ public class UserDetailsServiceCustom implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        Users user = usersRepository.findByUsername(username).orElseThrow(() -> new UsernameNotFoundException("username not found"));
-        if (user == null || !user.isActive()) {
-            throw new UsernameNotFoundException("User not found or disabled");
-        }
-        String roleCode = String.valueOf(user.getRole().getCode()); // Đảm bảo lấy trường map với cột 'code' trong DB
-        String authorityName = roleCode.startsWith("ROLE_") ? roleCode : "ROLE_" + roleCode;
-
-        List<SimpleGrantedAuthority> authorities = Collections.singletonList(
-                new SimpleGrantedAuthority(authorityName)
+        Users user = usersRepository.findByUsername(username).orElseThrow(() -> new UsernameNotFoundException("Người dùng " + username + " không tồn tại, vui lòng kiểm tra lại"));
+        Collection<GrantedAuthority> grantedAuthorities = List.of(
+                new SimpleGrantedAuthority("ROLE_" +  user.getRole().getCode())
         );
-        return UserPrinciple.builder().user(user).authorities(authorities).build();
+        return UserPrinciple.builder().user(user).authorities(grantedAuthorities).build();
     }
 }
